field_conv.cc:   Bug#11591   CHAR column with utf8 does not work properly   (more chars than expected)   do_cut_string didn't call well_formed_length,   and copied all data, which was wrong in the   case of multibyte character set. ctype_utf8.result, ctype_utf8.test:   adding test case

sql/field_conv.cc:
  Bug#11591
  CHAR column with utf8 does not work properly
  (more chars than expected)
  do_cut_string didn't call well_formed_length,
  and copied all data, which was wrong in the
  case of multibyte character set.
mysql-test/t/ctype_utf8.test:
  adding test case
mysql-test/r/ctype_utf8.result:
  adding test caser